--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -11,7 +11,6 @@ wrapper.java.mainclass=org.lnicholls.galleon.server.ServiceWrapper
 #  needed starting from 1
 wrapper.java.classpath.1=@conf@
 wrapper.java.classpath.2=@lib@/*.jar
-wrapper.java.classpath.3=@lib@/*.j
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=@lib@
@@ -22,16 +21,17 @@ wrapper.java.additional.2=-Djava.awt.fonts="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/
 wrapper.java.additional.3=-Dsun.java2d.fontpath="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/jre/lib/fonts"
 wrapper.java.additional.4=-Xbootclasspath/a:@lib@/pja.jar
 wrapper.java.additional.5=-Dawt.toolkit=com.eteks.awt.PJAToolkit
-wrapper.java.additional.6=-XX:NewSize=32m
-wrapper.java.additional.7=-XX:MaxNewSize=32m
-wrapper.java.additional.8=-XX:PermSize=10m
-wrapper.java.additional.9=-XX:MaxPermSize=20m
-@win32comment@wrapper.java.additional.10=-Droot=@root@
-@win32comment@wrapper.java.additional.11=-Dconf=@conf@
-@win32comment@wrapper.java.additional.12=-Dcache=@cache@
-@win32comment@wrapper.java.additional.13=-Dlogfile=@logfile@
-@osxcomment@@win32comment@wrapper.java.additional.14=-Djava.awt.graphicsenv=com.eteks.java2d.PJAGraphicsEnvironment
-@unixcomment@@win32comment@wrapper.java.additional.14=-Djava.awt.headless=@headless@
+@win32comment@wrapper.java.additional.6=-Droot=@root@
+@win32comment@wrapper.java.additional.7=-Dconf=@conf@
+@win32comment@wrapper.java.additional.8=-Dcache=@cache@
+@win32comment@wrapper.java.additional.9=-Dlogfile=@logfile@
+@win32comment@wrapper.java.additional.10=-Dlogs=@logs@
+@win32comment@wrapper.java.additional.11=-Ddata=@data@
+@win32comment@wrapper.java.additional.12=-Dapps=@apps@
+@win32comment@wrapper.java.additional.13=-Dhme=@hme@
+@win32comment@wrapper.java.additional.14=-Dskins=@skins@
+@osxcomment@@win32comment@wrapper.java.additional.15=-Djava.awt.graphicsenv=com.eteks.java2d.PJAGraphicsEnvironment
+@unixcomment@@win32comment@wrapper.java.additional.15=-Djava.awt.headless=@headless@
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=64
