--- a/galleon/win32.properties
+++ b/galleon/win32.properties
@@ -3,9 +3,12 @@ win32comment=#
 root=${basedir}
 lib=../lib
 bin=../bin
-conf=${root}/conf
+conf=../conf
+cache=../data
 logfile=../logs/log.txt
 wrapperlog=../logs/wrapper.log
 logs=../logs
-data=${root}/data
-apps=${root}/apps
+data=../data
+apps=../apps
+hme=../hme
+skins=../skins
