Make position independant

--- a/galleon/osx.properties
+++ b/galleon/osx.properties
@@ -1,15 +1,15 @@
 build=${basedir}/build/main
 miscdir=${basedir}/build/startup
 osxcomment=#
-root=/usr/share/galleon
+root=..
 lib=${root}/lib
 bin=${root}/bin
 conf=${root}/conf
 cache=/tmp/galleon.cache
 headless=true
-logfile=/var/log/galleon.log
-wrapperlog=/var/log/wrapper.log
-logs=/var/log
+logfile=../log/galleon.log
+wrapperlog=../log/wrapper.log
+logs=../log
 data=${root}/data
 apps=${root}/apps
 hme=${root}/hme
