--- a/galleon/osx.properties
+++ b/galleon/osx.properties
@@ -7,9 +7,9 @@ bin=${root}/bin
 conf=${root}/conf
 cache=/tmp/galleon.cache
 headless=true
-logfile=../log/galleon.log
-wrapperlog=../log/wrapper.log
-logs=../log
+logfile=../logs/galleon.log
+wrapperlog=../logs/wrapper.log
+logs=../logs
 data=${root}/data
 apps=${root}/apps
 hme=${root}/hme
